--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,15 @@ DerivedData
 # Bundler
 .bundle
 
+# IDEA Ignores #
+################
+*.iml
+*.ipr
+*.iws
+.idea/
+out/
+local.properties
+
 Carthage
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
