--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 # references:
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
-
+rvm: 2.2.2
 language: objective-c
+osx_image: xcode7.2
+
 # cache: cocoapods
 # podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+podfile: Example/Podfile
+before_install:
+ - gem install xcpretty
+ - gem install cocoapods  -v '0.39.0' # Since Travis is not always on latest version
+ - pod install --project-directory=Example
+
 script:
-- set -o pipefail && xcodebuild test -workspace Example/AZExpandableIconListView.xcworkspace -scheme AZExpandableIconListView-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/AZExpandableIconListView.xcworkspace -scheme AZExpandableIconListView-Example -destination 'platform=iOS Simulator,name=iPhone 6,OS=8.4' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
