--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,6 @@ before_install:
  - pod install --project-directory=Example
 
 script:
-- set -o pipefail && xcodebuild test -workspace Example/AZExpandableIconListView.xcworkspace \
-  -scheme AZExpandableIconListView-Example \
-  -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.0' \
-  ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/AZExpandableIconListView.xcworkspace -scheme AZExpandableIconListView-Example -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.0' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
 
