--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ notifications:
 podfile: Example/Podfile
 before_install:
  - gem install xcpretty
- - gem install cocoapods  -v '1.8.1' # Since Travis is not always on latest version
- - pod install --project-directory=Example
+ - gem install cocoapods
+ - pod setup
 
 script:
-- set -o pipefail && xcodebuild --verbose -workspace Example/AZExpandableIconListView.xcworkspace -scheme AZExpandableIconListView-Example -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.1' ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/AZExpandableIconListView.xcworkspace -scheme AZExpandableIconListView-Example -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.1' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
 
