--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,5 @@
 source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '11.0'
 use_frameworks!
 
 target 'AZExpandableIconListView_Example' do
